# RIG-AI-Engineering

./: .gitignore  README.md  RIG_AUDIT.md  RIG_CAPABILITY.md  V10_STATUS.md  V10_VISION.md  V15_STATUS.md  package-lock.json  package.json  pyproject.toml  rig  rig-hook.zsh  rig-install
.agentforge/: plan.md  scorecard.json  workflows.html
.agentforge/workflows/: rig-coach-check.json  rig-coach-refresh.json  rig-coach-score.json  rig-coach-template.json
.codex/environments/: environment.toml
apps/rig-prompt-master/: README.md  RIG Master Prompter.command  RIG Prompt Master.command  next.config.mjs  package-lock.json  package.json
archon/commands/: coach-check.md  coach-score.md  coach-template.md
archon/workflows/: rig-coach-check-workflow.yaml  rig-coach-refresh-workflow.yaml  rig-coach-score-workflow.yaml  rig-coach-template-workflow.yaml
assets/: com.rig.watcher.plist
catalogs/: rig-methodology-question-bank.yaml
docs/: rig-open-source-expansion.md  v10-git-agent-cli-mcp-readiness.md
prompt-templates/: README.md
python/rig/: __init__.py  prompt_engine.py  rig-mcp-server.py  rig-proxy.py  rig-watch.py  rig_app_server.py  rig_prompt_fixer.py  rig_prompt_scorer.py  rig_v15.py
python/tests/: test_prompt_engine.py
rules/: cross-harness-context-loss.md  gsd-plan-verify-gaps.md  hermes-context-injection.md  hermes-skill-usage.md  hermes-terminal-overuse.md  rig-doctrine-adherence.md
script/: build_and_run.sh
scripts/: ai-coach-check.sh  ai-coach-prompt.sh  ai-coach-refresh.sh  ai-coach-suggest.sh  dev-install.sh  rig-prompt-templates.json
(+78 files in other folders)
