[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rig-ai-engineering"
version = "0.1.0"
description = "RIG AI Engineering prompt intelligence runtime"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RIG AI Engineering contributors" }
]
dependencies = []

[project.scripts]
rig-engine = "rig.prompt_engine:main"

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
